<resources>
    <string name="app_name">ProyectoApp</string>
    <string name="hello_blank_fragments">Hello_blank_fragment</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="edad">Edad</string>
    <string name="guardar">Guardar</string>
    <string name="borrar_persona">¿Borrar persona?</string>
    <string name="si">Si, borrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="mapbox_access_token">sk.eyJ1IjoiamJ0b3IiLCJhIjoiY2w3NHNraTZiMGE2YTNucGFrcnh5d3lwdCJ9.RHx4N91qo91BHCbca637mw</string>

    //Foto
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="subir_foto">Subir Foto</string>
    <string name="su_foto_le_ayuda_para_qu_sus_contactos_pueda_identificarle_m_s_r_pido">Su foto le ayuda para qué sus contactos pueda identificarle más rápido</string>
</resources>